--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using LeaveManagementSystemIndividual
 @using LeaveManagementSystemIndividual.Models
+@using LeaveManagementSystemIndividual.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
